2011-11-21	Juergen Beisert <jbe@pengutronix.de>

	* Qt4 demo: fix a dependency error in its menu
	* BSP: remove generic startup script for the Qt4 demos. It done now in
	       the Qt4 rule files instead

2011-11-13	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: back to development
	* Qt4 demo: back to development

2011-11-13	Josef Holzmayr <holzmayr@rsi-elektrotechnik.de>

	* QML demo: add a new nice Qt/QML demo

2011-11-12	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Using platform-FriendlyARM-Mini2440-2011.11.0
	* Board Support Package: Release November 2011 (2011.11.0)

2011-11-03	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: add udev rule to give the touchscreen and the
				 buttons event devices explicit names
	* Qt4-demo:
		- Fix a leaking host
		- avoid an invisible cursor, when the demo starts

2011-11-02	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Use ptxdist-2011.11.0

2011-10-14	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Back to development
	* Board Support Package: Output a useful message at startup

2011-10-13	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Use ptxdist-2011.10.1
	* Board Support Package: Using platform-FriendlyARM-Mini2440-2011.10.0
	* Board Support Package: Release October 2011 (2011.10.0)

2011-09-10	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Using platform-FriendlyARM-Mini2440-2011.09.1

2011-09-09	Juergen Beisert <jbe@pengutronix.de>

	* Documentation: Improvements all over the place
	* Board Support Package: Using platform-FriendlyARM-Mini2440-2011.09.0

2011-09-07	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Use ptxdist-2011.09.0

2011-09-03	Juergen Beisert <jbe@pengutronix.de>

	* Documentation: Adapt to current kernel features

2011-08-15	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Using platform-FriendlyARM-Mini2440-2011.08.0